--- a/css-task2-2/style.css
+++ b/css-task2-2/style.css
@@ -1,3 +1,4 @@
+
 h1 {
     color:  #9b59b6;
 }
@@ -32,4 +33,39 @@ h1:first-child {
     linear-gradient(#eee .1em, transparent .1em);
     background-size: 100% 1.2em;
     padding: 0 10%;
+}
+
+.cat {
+    width: 350px; 
+    margin-top: -110px;
+    margin-left: -15px;
+}
+
+.gas {
+    width: 300px; 
+    margin-bottom: 87px;
+    margin-left: -490px;
+    transform: scale(-1, 1);
+}
+
+.sun {
+    width: 96px; 
+    margin-bottom: 265px;
+    margin-left: 15px;
+}
+
+.speak {
+    width: 450px; 
+    margin-top: -520px;
+    margin-left: 358px;
+}
+
+.dodo {
+    width: 100%; 
+    height: 250px;
+    background-image: url('assets/images-removebg-preview.png');
+    background-repeat: repeat-x;
+    background-size: contain;
+    position: relative;
+    top: -210px;
 }
