--- a/google_site-task3-final/style.css
+++ b/google_site-task3-final/style.css
@@ -140,20 +140,18 @@ body {
     background-position: center;
     border: none;
     outline: none; 
-    transform: translateY(-50%);
-    position: relative;
-    top: 59px;
     width: 300px;
     height: 300px;
-    z-index: -1;
     pointer-events: none;
 }
 
 #cc-container {
     z-index: 1;
-    position: relative;
+    position: fixed; 
+    bottom: 60px;
+    left: -811px;
     width: 100%;
-    height: 100%;
+    text-align: center; 
 }
 
 input.img-button {
