--- a/google_site-task3-final/style.css
+++ b/google_site-task3-final/style.css
@@ -89,7 +89,7 @@ body {
   
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     background-color: #f2f2f2;
     width: 100%;
@@ -135,13 +135,13 @@ body {
     z-index: 5;
   }
 
-  #cc-cat {
+#cc-cat {
     background-size: contain; 
     background-position: center;
     border: none;
     outline: none; 
-    width: 300px;
-    height: 300px;
+    width: 510px;
+    height: 510px;
     pointer-events: none;
 }
 
@@ -176,3 +176,28 @@ input.img-button {
     margin-left: -15px;
   }
 
+  #ccc-cat {
+    background-size: contain; 
+    background-position: center;
+    border: none;
+    outline: none; 
+    width: 460px;
+    height: 460px;
+    pointer-events: none;
+}
+
+#ccc-container {
+    z-index: 1;
+    position: fixed; 
+    bottom: 92px;
+    right: -811px;
+    width: 100%;
+    text-align: center; 
+}
+
+.suny {
+    width: 350px;
+    position: fixed;
+    top: -40px;
+    left: 310px;
+}
