--- a/spotify_site-task5/style.css
+++ b/spotify_site-task5/style.css
@@ -174,3 +174,48 @@ button:hover {
     margin-right: 24px;
     color: #919496;
 }
+
+.box1 {
+    width: 130px;
+    height: 130px;
+    background: #1ed760;
+    position: absolute;
+    left: 99px;
+    top: 180px;
+}
+
+.box2 {
+    width: 50px;
+    height: 50px;
+    background: #1ed760;
+    position: absolute;
+    left: 206px;
+    top: 280px;
+}
+
+.box1:hover {
+    transition: all 1000000s;
+    transform: rotate(10000000000deg);
+}
+
+.box2:hover {
+    transition: all 1000000s;
+    transform: rotate(10000000000deg);
+}
+
+.box3 {
+    width: 300px;
+    height: 280px;
+    background: #1ed760;
+    position: absolute;
+    right: 180px;
+    bottom: -100px;
+}
+
+.box3:hover {
+    transition: all 0.5s;
+    transform: scale(1.02);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZF5ARwcBZZW5rrKHXtrgEf3OatedD7pLw-A&s);
+}
