--- a/bootstrap-task6/style.css
+++ b/bootstrap-task6/style.css
@@ -43,6 +43,11 @@ nav {
 footer {
     font-size: 14px;
     background: #19110b;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border: 1px solid red;;
 }
 
 .col {
@@ -108,6 +113,38 @@ a {
     }
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 body {
     cursor: crosshair;
 }
+
+@media screen and (min-width: 1280px) and (max-width: 2736px) and (orientation: landscape) {
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+
+    .footer {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 912px) and (min-height: 1368px) and (orientation: portrait) {
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+
+    .footer {
+        margin-bottom: 0;
+    }
+}
+
